docs: sync CLAUDE.md ui/gui terminology after module split; add lecture transcript notes